<resources>
    <string name="app_name">Meu Ponto</string>
    <string name="action_settings">Configurações</string>
    <string name="titulo">Meu Ponto</string>
    <string name="entrada">Entrada</string>
    <string name="data">Data</string>
    <string name="saida">Saída</string>
    <string name="saida_almoco">Almoço</string>
    <string name="retorno_almoco">Retorno</string>
    <string name="marcacoes">Ultimas marcações</string>
    <string name="salvarAlteracao">Salvar</string>
    <string name="title_activity_editar">Editar Registro</string>
    <string name="title_menu_excluir">Excluir tudo</string>
    <string name="registro_apagado">Registros apagados</string>
    <string name="saudacao_entrada">Tenha um bom dia</string>
    <string name="saudacao_almoco">Bom almoço</string>
    <string name="saudacao_retorno_almoco">Bem vindo de volta</string>
    <string name="saudacao_saida">Bom descanso</string>
    <string name="registro_duplicado">Já existe um Registro para essa data</string>
    <string name="registro_inexistente">Não existe registro de entrada</string>

    <!--producao-->
    <string name="banner_ad_unit_id">ca-app-pub-6452310333165626/7705029597</string>
    <!--Debug-->
    <!--<string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>-->
</resources>
