<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:padding="5dp"
    android:background="@drawable/list_selector">



    <TextView
        android:id="@+id/data"
        android:layout_marginTop="1dp"
        android:layout_marginBottom="1dp"
        android:layout_width="40dp"
        android:layout_height="65dp"
        android:textSize="15sp"
        android:gravity="center"
        android:layout_marginLeft="1dp"

        />
    <TextView
        android:id="@+id/txtid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtHoraEntrada"
        android:layout_toRightOf="@+id/txtdata"
        android:layout_marginLeft="16dp"
        android:textSize="20sp"
        android:textColor="@color/cinza_escuro"
        android:visibility="invisible"
        android:paddingLeft="5dp"
        />
    <TextView
        android:id="@+id/txtEntrada"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/data"
        android:layout_marginLeft="15dp"
        android:text="@string/entrada"
        android:textSize="15sp"
        android:textColor="@color/cinza_escuro"
        android:paddingLeft="5dp"
        android:layout_marginTop="10dp"
        />
    <TextView
        android:id="@+id/txtAlmoco"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/txtEntrada"
        android:layout_alignTop="@+id/txtEntrada"
        android:layout_marginLeft="15dp"
        android:textSize="15sp"
        android:textColor="@color/cinza_escuro"
        android:text="@string/saida_almoco"
        />
    <TextView
        android:id="@+id/txtVoltaAlmoco"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/txtAlmoco"
        android:layout_alignTop="@+id/txtAlmoco"
        android:layout_marginLeft="15dp"
        android:textSize="15sp"
        android:textColor="@color/cinza_escuro"
        android:text="@string/retorno_almoco"
        />

    <TextView
        android:id="@+id/txtSaida"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/txtVoltaAlmoco"
        android:layout_alignTop="@+id/txtVoltaAlmoco"
        android:layout_marginLeft="15dp"
        android:textSize="15sp"
        android:textColor="@color/cinza_escuro"
        android:text="@string/saida"
        />

    <TextView
        android:id="@+id/txtHoraEntrada"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:textColor="#333333"
         android:layout_gravity="top"
        android:layout_below="@+id/txtEntrada"
        android:layout_toRightOf="@+id/data"
        android:layout_marginLeft="19dp"
        android:textSize="20sp"/>


    <TextView
        android:id="@+id/txtHoraAlmoco"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:textColor="#333333"
        android:layout_gravity="top"
        android:textSize="20sp"
        android:layout_below="@+id/txtAlmoco"
        android:layout_toLeftOf="@+id/txtVoltaAlmoco"
        android:layout_toStartOf="@+id/txtVoltaAlmoco" />


    <TextView
        android:id="@+id/txtHoraVoltaAlmoco"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:textColor="#333333"
        android:paddingLeft="5dp"
        android:layout_gravity="top"
        android:textSize="20sp"
        android:layout_alignTop="@+id/txtHoraSaida"
        android:layout_toLeftOf="@+id/txtSaida"
        android:layout_toStartOf="@+id/txtSaida" />

    <TextView
        android:id="@+id/txtHoraSaida"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:textColor="#333333"
        android:paddingLeft="5dp"
        android:layout_gravity="top"
        android:layout_below="@+id/txtSaida"
        android:layout_alignLeft="@+id/txtSaida"
        android:layout_alignStart="@+id/txtSaida"
        android:textSize="20sp"/>

</RelativeLayout>